--- a/root/.jshintrc
+++ b/root/.jshintrc
@@ -1,13 +1,26 @@
 {
+  "sub":true,
+  "laxbreak":true,
+  "laxcomma":true,
+  "regexp":true,
+  "asi": true,
+  "browser": true,
+  "loopfunc":true,
+  "expr":true,
+  "node": true,
+  "es5": true,
+  "esnext": true,
+  "bitwise": true,
   "curly": true,
-  "eqeqeq": true,
   "immed": true,
-  "latedef": true,
+  "latedef": false,
+  "expr": true,
+  "eqeqeq": false,
+  "eqnull": false,
   "newcap": true,
   "noarg": true,
-  "sub": true,
-  "undef": true,
-  "boss": true,
-  "eqnull": true,
-  "node": true
+  "undef": false,
+  "proto": true,
+  "strict": false,
+  "smarttabs": true
 }
